--- a/PyramidWord.html
+++ b/PyramidWord.html
@@ -1,8 +1,8 @@
 <html>
         <body>
             <form>
-                Enter a word:<br>
-                <input type = "text" name = "userInput"><br>
+                Enter a word: (only letters accepted)<br>
+                <input type = "text" name = "userInput" pattern = "[A-Za-z]"><br>
                 <button id = "button">Test</button>
             </form>
 
