--- a/PyramidWord.html
+++ b/PyramidWord.html
@@ -1,3 +1,5 @@
+<!--This HTML document is front-end for the JavaScript Program that checks to see if
+    the user input is a pyramid word. -->
 <html>
         <body>
             <form>
