--- a/PyramidWord.html
+++ b/PyramidWord.html
@@ -3,8 +3,8 @@
 <html>
         <body>
             Enter a word: (only letters accepted)<br>
-            <input type = "text" name = "userInput" onclick = "validateForm()"><br>
-            <button id = "button">Test</button><br>
+            <input type = "text" name = "userInput"><br>
+            <button id = "button" onclick = "validateForm()">Test</button><br>
 
             <p id = "result"></p>
 
