--- a/PyramidWord.html
+++ b/PyramidWord.html
@@ -4,7 +4,7 @@
         <body>
             Enter a word: (only letters accepted)<br>
             <input type = "text" name = "userInput"><br>
-            <button id = "button" onclick = "validateForm()">Test</button><br>
+            <button id = "button">Test</button><br>
 
             <p id = "result"></p>
 
