--- a/PyramidWord.html
+++ b/PyramidWord.html
@@ -3,7 +3,7 @@
 <html>
         <body>
             Enter a word: (only letters accepted)<br>
-            <input type = "text" name = "userInput"><br>
+            <input type = "text" id = "userInput"><br>
             <button id = "button">Test</button><br>
 
             <p id = "result"></p>
